# chakram

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
chakram/: __main__.py  grammar.lark  parser.py  transformer.py
examples/: 1.b  2.b  label.b  lvalue.b  simple.b  ternary.b  unary.b  unary_2.b
test/: test_chakram.py  test_xion.py
test/fixture/: call.b  floats.b  program_1_ast.py  program_1_ast_json.py  program_1_parse_tree.py  program_2_parse_tree.py  program_3_parse_tree.py
vscode-b.language/: language-configuration.json  package.json  readme.md
vscode-b.language/syntaxes/: b-language.tmLanguage.json
xion/: __main__.py  grammar.lark  parser.py  transformer.py
