[tool.poetry]
name = "xion"
version = "1.1.6"
description = "Lexer, Parser (compiler frontend) for the B Language"
authors = ["Jahan Addison"]

[tool.poetry.dependencies]
python = ">=3.11"
mypy = "^1.13.0"
flake8 = "^7.1"
lark = "^1.2.2"

[tool.poetry.dev-dependencies]
setuptools = "^80.9.0"
pytest-cov = "^6"
pytest = "^8"

[tool.coverage.run]
omit = [
    "xion/__main__.py",
]

[build-system]
requires = ["poetry>0.12,<1.8.3"]
build-backend = "poetry.masonry.api"
