[metadata]
name = xion
description = Compiler frontend for the B Language
version = 1.1.8
author = Jahan Addison
author_email = jahan@jahanaddison.com
home_page = https://github.com/jahan-addison/xion
platform = any
keywords = B language compiler python syntax parsing lexing abstract
classifiers =
    Development Status :: Alpha
    License :: Apache 2 License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3
    License :: Apache 2 Licens


[flake8]
ignore =
    F841
max-line-length = 120
